<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_destination"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.destination.DestinationFragment">

    <Button
        android:id="@+id/button_log_travel"
        android:layout_width="231dp"
        android:layout_height="57dp"
        android:text="Log Travel"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@drawable/button_eclipse_brown"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/button_calculate_vacation"
        android:layout_width="340dp"
        android:layout_height="57dp"
        android:text="Calculate Vacation Time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@drawable/button_eclipse_brown"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacation_form" />

    <!--Log Travel Table-->
    <TableLayout
        android:id="@+id/vacation_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/table_sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_log_travel"
        >
    <!--Calculate Vacation Time Button-->

        <TableRow>
            <!--Log Travel Location-->
            <TextView
                android:id="@+id/text_travel_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Travel Location:"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <!--Log Travel Location Text-->
            <EditText
                android:id="@+id/travel_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:hint="Location Name"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="40dp"/>
        </TableRow>

        <TableRow>
            <!--Log Travel Estimated Start-->
            <TextView
                android:id="@+id/text_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="casual"
                android:text="Estimated Start:"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <!--Log Travel Estimated End-->
            <TextView
                android:id="@+id/text_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:paddingLeft="50dp"
                android:paddingRight="40dp"
                android:fontFamily="casual"
                android:text="Estimated End:"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <!--Log Travel Estimated Start Text-->
            <EditText
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:hint="yyyy-mm-dd"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="40dp"/>
            <!--Log Travel Estimated End Text-->
            <EditText
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:hint="yyyy-mm-dd"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="10dp"      />
        </TableRow>

        <TableRow>
            <!--Log Travel Cancel Button-->
            <Button
                android:id="@+id/button_log_travel_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_eclipse"
                android:textColor="@android:color/white"
                android:text="Cancel"
                android:textAlignment="center"
                />
            <!--Log Travel Submit Button-->
            <Button
                android:id="@+id/button_log_travel_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="0dp"
                android:layout_marginStart="20dp"
                android:text="Submit"
                android:background="@drawable/button_eclipse"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />
        </TableRow>
    </TableLayout>
     <!--Allyson Implementation-->
    <TableLayout
        android:id="@+id/vacation_time_form"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/table_sky"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calculate_vacation">
        <!--app:layout_constraintBottom_toTopOf="@id/text_destination"-->

        <TableRow>
            <TextView
                android:id="@+id/text_start_date_time_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:text="Start Date:"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/vacation_time_start_data_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_weight="1"
                android:hint="yyyy-mm-dd"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="40dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/text_end_date_time_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:text="End Date:"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/vacation_time_end_data_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:hint="yyyy-mm-dd"
                android:textColorHint="@color/white"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="40dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/text_duration_time_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:text="Duration:"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/vacation_time_duration_data_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="40dp"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_vacation_time_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/button_eclipse"
                android:textColor="@android:color/white"
                android:text="Cancel"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/button_vacation_time_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="0dp"
                android:layout_marginStart="45dp"
                android:text="Submit"
                android:background="@drawable/button_eclipse"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/vacation_time_form_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/table_sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacation_time_form">

        <TableRow>
            <TextView
                android:id="@+id/text_vacation_time_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:fontFamily="casual"
                android:text="Duration Total:"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/vacation_time_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:fontFamily="casual"
                android:text=""
                android:textSize="25dp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/view_travel_logs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@drawable/table_sky_evening"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacation_time_form_results">

        <TextView
            android:id="@+id/text_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vacation_time_form_results"/>

        <ListView
            android:id="@+id/listView_travel_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/vacation_time_form"/>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

